# funtask

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
src/fun_task.egg-info/: PKG-INFO  SOURCES.txt
src/funtask.egg-info/: PKG-INFO  SOURCES.txt
src/funtask/task/: submit.py
src/funtasks.egg-info/: PKG-INFO  SOURCES.txt
src/nlttask/task/: submit.py
