[project]
name = "nlttask"
version = "1.0.2"
description = "nlttask"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "nltlog>=1.1.3", "sqlalchemy>=2.0.50",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funtask"
Releases = "https://github.com/farfarfun/funtask/releases"

[tool.setuptools]
license-files = []
